--- a/views/updateblog.ejs
+++ b/views/updateblog.ejs
@@ -175,25 +175,32 @@
 						<li><a href="">Self-improvement</a></li>
 						<li><a href="">Success</a></li>
 					</ul>
-					<a href="/addblog" class="me-5 text-3xl p-3">Add Blogs</a>
+					<a href="/addblog" class="me-5 text-3xl p-3">Add Your Blogs</a>
 				</div>
 			</div>
 			<center>
 				<div class=" mt-28 abcd ">
-					<form action="/updateblog/<%= blog._id %>" method="POST" enctype="multipart/form-data" class="flex flex-col">
-						<caption><h1 class="text-5xl font-semibold">Update Blogs!!</h1></caption>
+					<form action="/updateblog/<%= blog._id %>" method="POST" enctype="multipart/form-data"
+						class="flex flex-col">
+						<caption>
+							<h1 class="text-5xl font-semibold">Update Blogs!!</h1>
+						</caption>
 
 						<!-- TITLE OF THE BLOG -->
-						<input type="text" class="mt-5 px-4 py-3 rounded-lg" id="title" name="title" value="<%= blog.title %>" placeholder="Title:" required />
+						<input type="text" class="mt-5 px-4 py-3 rounded-lg" id="title" name="title"
+							value="<%= blog.title %>" placeholder="Title:" required />
 
-						<!-- DESCRIPTION OF THE BLOG --> 
-						<textarea name="description" id="description" placeholder="description" class="mt-5 px-4  py-5 rounded-lg" required><%= blog.description %></textarea>
+						<!-- DESCRIPTION OF THE BLOG -->
+						<textarea name="description" id="description" placeholder="description"
+							class="mt-5 px-4  py-5 rounded-lg" required><%= blog.description %></textarea>
 
 						<!-- FILE UPLOAD -->
-                        <input type="file" id="blogImage" name="blogImage" class="mt-4">
-                        <img src="/<%= blog.blogImage %>" alt="Blog Image" class="mt-3" style="max-width: 200px; max-height: 200px;">
-						<!-- SUBMIT BUTTON -->  
-						<button type="submit" class="upload-button mt-5 bg-blue-800 items-center justify-center" name="submit">Update Blog</button>
+						<input type="file" id="blogImage" name="blogImage" class="mt-4">
+						<img src="/<%= blog.blogImage %>" alt="Blog Image" class="mt-3"
+							style="max-width: 200px; max-height: 200px;">
+						<!-- SUBMIT BUTTON -->
+						<button type="submit" class="upload-button mt-5 bg-blue-800 items-center justify-center"
+							name="submit">Update Blog</button>
 					</form>
 				</div>
 		</div>
