--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,14 +10,15 @@
 </head>
 <style>
   .hero {
-    background-image: url(../uploads/img/bg3.webp);
+    background-image: url(../uploads/img/blog-post-image-guide.webp);
     background-size: contain;
     width: 100%;
-    height: 100vh;
+    height: 800px;
     background-repeat: no-repeat;
     background-position: center;
   }
 </style>
+
 <body>
   <header>
     <nav class="bg-white fixed top-0 left-0 right-0">
@@ -53,7 +54,7 @@
               <div class="container-fluid d-flex">
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                  </form>
+                </form>
                 <div class="p-2 btn btn-primary"><a href="/logout">Log out</a> </div>
               </div>
             </div>
@@ -64,19 +65,7 @@
   </header>
   <main>
     <div class="hero">
-      <div class="flex flex-row h-full">
-        <div class="basis-1/2 h-full">
-          <div class="relative h-full">
-            <div class="absolute top-40 left-[20%]">
-              <h1 class="text-white text-9xl font-semibold">
-                Boost Your Success
-              </h1>
-              <span class="text-2xl text-white">Tips and tools for a productive mindset</span>
-            </div>
-          </div>
-        </div>
-        <div class="basis-1/2"></div>
-      </div>
+
     </div>
     <div class="container mx-auto  absolute right-0 left-0  bg-white " style="top: 80%;">
       <div class="flex justify-between items-baseline">
@@ -86,26 +75,33 @@
           <li><a href="">Self-improvement</a></li>
           <li><a href="">Success</a></li>
         </ul>
-        <a href="/addblog" class="me-5 text-3xl p-3 text-sky-400">Add Blogs</a>
+        <a href="/addblog" class="me-5 text-3xl p-3 text-sky-400">Add Your Blogs</a>
       </div>
       <div class="blogs row ">
         <% blogs.forEach(blog=> { %>
           <div class="col-6 mb-3">
-            <div class="single-blog bg-gray-200 rounded-md" >
+            <div class="single-blog bg-gray-200 rounded-md">
               <div class="blog-img">
-                <img src="<%= blog.blogImage %>" alt="">
+                <img src="<%= blog.blogImage %>" alt="" width="100%">
               </div>
               <div class="blog-info mt-3 px-4 py-3">
-                <h2 class="text-3xl fw-bold"><%= blog.title %></h2>
-                <p class="fs-5 mt-4"><%= blog.description %></p>
+                <h2 class="text-3xl fw-bold">
+                  <%= blog.title %>
+                </h2>
+                <p class="fs-5 mt-4">
+                  <%= blog.description %>
+                </p>
                 <div class="buttons d-flex mt-3 align-items-center justify-between">
-                 <div class="main-btn">
-                  <button type="submit" class=" btn btn-primary" name="submit"><a href="/updateblog/<%= blog._id %>">Update Blog</a></button>
-                  <form action="/deleteblog/<%= blog._id %>" method="POST" style="display: inline;">
-                    <button type="submit" class="btn-danger btn">Delete Blog</button>
-                </form>
-                 </div>
-                <div class="text-end text-gray-600"><%= blog.createdAt.toDateString() %></div>
+                  <div class="main-btn">
+                    <button type="submit" class=" btn btn-primary" name="submit"><a
+                        href="/updateblog/<%= blog._id %>">Update Blog</a></button>
+                    <form action="/deleteblog/<%= blog._id %>" method="POST" style="display: inline;">
+                      <button type="submit" class="btn-danger btn">Delete Blog</button>
+                    </form>
+                  </div>
+                  <div class="text-end text-gray-600">
+                    <%= blog.createdAt.toDateString() %>
+                  </div>
                 </div>
 
               </div>
